--- a/local.yml
+++ b/local.yml
@@ -2,10 +2,11 @@
   connection: local
   become: true 
 
+  pre_tasks:
+    - name: update repos
+      apt:
+        update_cache: yes
+      changed_when: false
+
   tasks:
-  - name: install htop
-    apt: 
-      name: 
-        - htop
-        - mc
-        - tmux
+    - include: tasks/packages.yml
